--- a/reac_01/style.css
+++ b/reac_01/style.css
@@ -29,7 +29,7 @@ button {
 .avatar {
   width: 150px;
   height: 150px;
-  background-image: url("https://reactlink.com/static/app-assets/images/user/12.jpg");
+  background-image: url("");
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 50%;
